fix: prevent long names or mail adresses overlapping with icon in input fields

--- a/style/contacts/contacts.css
+++ b/style/contacts/contacts.css
@@ -245,6 +245,10 @@
     font-size: 20px;
 }
 
+.input-width-contacts{
+    max-width: 85%;
+}
+
 .single-User {
     display: flex;
     gap: 35px;
